tests/invalid/for_range_ref_binding_not_supported.wio
fn Entry() -> i32 {
    for ref i in 1...3 {
        return i;
    }

    return 0;
}
